--- a/Flix/Base.lproj/Main.storyboard
+++ b/Flix/Base.lproj/Main.storyboard
@@ -15,9 +15,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="168" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SGd-Me-Um3">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="168" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SGd-Me-Um3">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="168" id="of7-ef-gjP" customClass="MovieCell" customModule="Flix" customModuleProvider="target">
@@ -27,26 +26,39 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="168"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cyb-ag-llo">
-                                                    <rect key="frame" x="20" y="11" width="124" height="146"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Cyb-ag-llo">
+                                                    <rect key="frame" x="10" y="10" width="124" height="146"/>
                                                     <color key="backgroundColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="146" id="31s-4c-Qte"/>
+                                                        <constraint firstAttribute="width" constant="124" id="m4J-P0-EN9"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JVp-0y-wpt">
-                                                    <rect key="frame" x="152" y="49" width="254" height="108"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHq-RY-YaD">
-                                                    <rect key="frame" x="152" y="11" width="254" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHq-RY-YaD">
+                                                    <rect key="frame" x="144" y="10" width="260" height="29"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JVp-0y-wpt">
+                                                    <rect key="frame" x="144" y="44" width="240" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="JVp-0y-wpt" secondAttribute="trailing" constant="10" id="0eb-tl-9Zo"/>
+                                                <constraint firstItem="Cyb-ag-llo" firstAttribute="leading" secondItem="Pih-pN-WMG" secondAttribute="leading" constant="10" id="6vb-aI-wRP"/>
+                                                <constraint firstAttribute="trailing" secondItem="XHq-RY-YaD" secondAttribute="trailing" constant="10" id="R2Z-qE-9KG"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="JVp-0y-wpt" secondAttribute="bottom" constant="10" id="TmZ-wL-L3L"/>
+                                                <constraint firstItem="XHq-RY-YaD" firstAttribute="top" secondItem="Pih-pN-WMG" secondAttribute="top" constant="10" id="UPP-Xt-khM"/>
+                                                <constraint firstItem="Cyb-ag-llo" firstAttribute="top" secondItem="Pih-pN-WMG" secondAttribute="top" constant="10" id="VEu-rw-Aef"/>
+                                                <constraint firstItem="XHq-RY-YaD" firstAttribute="leading" secondItem="Cyb-ag-llo" secondAttribute="trailing" constant="10" id="Vdi-dE-bPZ"/>
+                                                <constraint firstItem="JVp-0y-wpt" firstAttribute="leading" secondItem="Cyb-ag-llo" secondAttribute="trailing" constant="10" id="igA-UN-IWU"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Cyb-ag-llo" secondAttribute="bottom" constant="10" id="n2e-Vj-tF5"/>
+                                                <constraint firstItem="JVp-0y-wpt" firstAttribute="top" secondItem="XHq-RY-YaD" secondAttribute="bottom" constant="5" id="zlS-2G-hrH"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="posterView" destination="Cyb-ag-llo" id="RNf-KH-6Yd"/>
@@ -58,6 +70,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="SGd-Me-Um3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9Mi-WM-dck"/>
+                            <constraint firstAttribute="bottom" secondItem="SGd-Me-Um3" secondAttribute="bottom" id="QAO-MK-9db"/>
+                            <constraint firstItem="SGd-Me-Um3" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="blF-6T-Ax7"/>
+                            <constraint firstItem="SGd-Me-Um3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pV2-C7-dL4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Movies" id="0bp-H1-oPf"/>
